# python-slowsort

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.circleci/: config.yml
slowsort/: __init__.py
tests/: test_slowsort.py
